--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Timer</title>
-    <link rel="stylesheet" href="css/01-color-switcher.938a87ed.css">
+    <link rel="stylesheet" href="css/01-color-switcher.css">
     <script type="module" src="js/02-timer.67ef238f.js"></script>
     <script nomodule="" defer src="js/02-timer.96b003fb.js"></script>
 </head>
