--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promise generator</title>
-    <link rel="stylesheet" href="css/01-color-switcher.938a87ed.css">
+    <link rel="stylesheet" href="css/01-color-switcher.css">
 </head>
 <body>
     <p><a href="index.html">Go back</a></p>
