--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 9</title>
-    <link rel="stylesheet" href="01-color-switcher.938a87ed.css">
+    <link rel="stylesheet" href="01-color-switcher.css">
 </head>
 
 <body>
